# eeg-motor-imagery-classification

./: .gitignore  CV_SUMMARY.md  README.md  pyproject.toml  requirements.txt
archive/original_solution/: exercise10_original.py
configs/: default_run.json
models/: eegnet_best.weights.h5
models/experiments/baseline_first_block/: eegnet_best.weights.h5
models/experiments/sgd_stratified/: eegnet_best.weights.h5
results/experiments/: COMPARISON.md
results/experiments/adam_stratified/metrics/: channel_importance.csv  metrics.json  results_summary.md  run_config.json  training_history.csv  training_history.json
results/experiments/baseline_first_block/metrics/: channel_importance.csv  metrics.json  results_summary.md  run_config.json  training_history.csv  training_history.json
results/experiments/sgd_stratified/metrics/: channel_importance.csv  metrics.json  results_summary.md  run_config.json  training_history.csv  training_history.json
results/metrics/: channel_importance.csv  csp_lda_metrics.json  csp_lda_summary.md  model_comparison.csv  model_comparison.md  model_summary.txt  results_summary.md  run_config.json  training_history.csv  training_history.json
scripts/: run_baseline.py  train_model.py
src/eeg_motor_imagery/: __init__.py  baseline.py  config.py  data.py  evaluation.py  model.py  plotting.py  train.py
tests/: helpers.py  test_baseline.py  test_config.py  test_data.py  test_pipeline_smoke.py
